// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryStartDate renders with a custom date 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is: 5th November 2019
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with a custom input max value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is: 2
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with a custom input min value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           min="1"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with a custom input value 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value="Foobar"
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with a disabled input 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with an error 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with appropriate start message when isAddressUpdate 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
  <p>
    We’ll start delivering to this address from:
    <strong class="js-start-date-text">
    </strong>
  </p>
</label>
`;

exports[`DeliveryStartDate renders with country different than default 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;

exports[`DeliveryStartDate renders with default props 1`] = `
<label id="deliveryStartDateField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryStartDate"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="start-date-picker-title-span"
    >
      Start date
    </span>
    <span class="o-forms-title__prompt">
      The first print edition you will receive is:
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="date"
           id="deliveryStartDate"
           name="deliveryStartDate"
           data-trackable="field-deliveryStartDate"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please select a valid start date
    </span>
  </span>
</label>
`;
